<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_16sdp">

        <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/wi_dow_nload_lib_rary"
                android:textColor="@color/colorAccentWhite"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/wa_oment"
                android:textColor="#10B5FF"
                android:textSize="18sp" />

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_8sdp" />

            <Button
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/button_background"
                android:onClick="onClickDismissDialog"
                android:text="@string/btndimiss"
                android:textColor="@color/colorAccentWhite" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>