<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccentWhite">
    <com.google.android.gms.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/admob_banner_id" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_70sdp"
            android:onClick="onPickImage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/bg_green">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvwebView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:onClick="onClickTextEdit"
                        android:padding="@dimen/_8sdp" />
                    <EditText
                        android:id="@+id/editwebView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:visibility="gone"
                        android:textSize="15sp"
                        android:padding="@dimen/_8sdp" />
                </FrameLayout>

                </LinearLayout>

            </LinearLayout>


        </ScrollView>

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/_2sdp" >
            <ImageView
                android:id="@+id/imageView1"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp" />
            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:onClick="onClickShare"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/textview_utile"
                android:layout_height="@dimen/_30sdp" />

        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvdir"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="إضغط هنا للوصول إلى الملف" />

            <Button
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="إضغط هنا للوصول إلى الملف"
                android:onClick="btnclickDir" />




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text="@string/sekpitc" />

                <SeekBar
                    android:id="@+id/seekbar_pitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:progress="60" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text="@string/sekbapeed" />

                <SeekBar
                    android:id="@+id/seekbar_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:progress="75" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">



                <Button
                    android:id="@+id/btnMore"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/btns_new_more"
                    android:onClick="btnMore" />


                <Button
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/btns_save"
                    android:onClick="onSaveFile" />

                <Button
                    android:id="@+id/btnTranslate"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/btns_translate"
                    android:onClick="onClickPlay" />


                <Button
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/btns_share"
                    android:onClick="onClickShareText" />

            <Button
                android:visibility="gone"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_gravity="center"
                android:background="@drawable/btns_share"
                android:onClick="onClickSpeak" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>